Name:           affine
Version:        0.8.0
Copyright:      2009, Jesse A. Tov
Cabal-Version:  >= 1.2
License:        BSD3
License-File:   LICENSE
Stability:      experimental
Author:         Jesse A. Tov <tov@ccs.neu.edu>
Maintainer:     tov@ccs.neu.edu
Homepage:       http://www.ccs.neu.edu/~tov/pubs/affine-contracts
Category:       Compilers/Interpreters
Synopsis:       An implementation of "Affine Contracts for Affine Types"
Build-type:     Simple

Executable affine
  Main-Is:              Main.hs
  Hs-Source-Dirs:       src
  GHC-Options:          -W -Wall -O2
  Build-Depends:        haskell98,
                        base >= 3,
                        syb >= 0.1,
                        pretty >= 1,
                        containers >= 0.1,
                        parsec >= 2.1,
                        mtl >= 1.1
  Build-Depends:      editline
  CPP-Options:        -DUSE_READLINE=System.Console.Editline.Readline

  -- Ick!  Is there a better way?
  -- if impl(ghc == 6.10.*)
  -- else
    -- if impl(ghc == 6.8.*)
      -- Build-Depends:    readline
      -- CPP-Options:      -DUSE_READLINE=System.Console.Readline

